--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "nodemailer": "^6.7.1"
+    "nodemailer": "^6.7.1",
+    "yarn": "^1.22.19"
   }
 }
